# sck-runtime

./: README.md  __init__.py  pyproject.toml
.devcontainer/: devcontainer.json
core/: router.py
kernel/: dag.py  executor.py  runtime.py  state.py
skills/: base.py  registry.py
skills/builtins/: spectral_truth_alignment.py
truth/: classifier.py  spectral.py
