[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sck-runtime"
version = "0.1.0"
description = "Sovereign Cognitive Kernel Runtime Engine"
authors = [{ name="SCK Research Group" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
